
>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* UT3 is now a little easier
	
August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Polymorphing cloned multitiled items no longer crashes
	* Vladimir can no longer be cloned
	* Bear traps are no longer polymorphable, since this happening when they were
	  trapping someone caused a crash
	* Corrected two Yet Another Teleport on Mine, Polymorph and Crash Bugs
	* Teleporting away from bear traps works again correctly
	* Saving and loading while transporting Vladimir through the wilderness no
	  longer crashes
	* Highscores now store system time and a random 31-bit integer along with
	  score information, which may be useful for MIHAIL
	* Purified the source from a fatal bug which could cause removing of
	  multitiled creatures from prescripted strategic locations to abort the game

August 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* When multi-squared monsters enters a square with a door. The door is destroyed.

August 5 2003 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* typo corrected "blah are/is too large to big up" -> pick up

August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* Resurrecting monsters will now trigger StepOn effects under them
	* Corrected a typo in Vladimir's description
	* Vladimir can no longer be polymorphed

August 4 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>

	* The alternative key settings now work in felists, for instance inventory
	* Imps are now immune to fire
	* Gibberlings now gibber instead of grunting
	* Ikiros can now fix any metal item even if it's harder than mithril; the
	  former restriction was really unrealistic
	* NEWS and AUTHORS updated