@@ -1171,226 +1171,6 @@ Dungeon ATTNAM;
 			WallSquare = solidterrain(SNOW_TERRAIN), FIR_WOOD wall(BRICK_FINE);
 			DoorSquare = solidterrain(FLOOR), door;
 		}
-
-		/*Square, Random;
-		{
-			Character = genetrixvesana { Team = ATTNAM_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = genetrixvesana { Team = MONSTER_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = elpuri { Team = ATTNAM_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = elpuri { Team = MONSTER_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = vladimir { Team = ATTNAM_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = vladimir { Team = MONSTER_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = kobold(PATRIARCH) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = ennerbeast { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = goblin(KING) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = oree { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = mistress(QUEEN) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = skeleton(WAR_LORD) { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = imperialist { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(ARCH_MAGE) { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = angel(DULCIS) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = angel(NEFAS) { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = angel(MELLIS) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = darkknight(GRAND_MASTER) { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = golem(SPIDER_SILK) { Team = ATTNAM_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = orc(MARSHAL) { Team = MONSTER_TEAM; }
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(APPRENTICE) { Team = ATTNAM_TEAM; }
-			Times = 50;
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(APPRENTICE) { Team = MONSTER_TEAM; }
-			Times = 50;
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(BATTLE_MAGE) { Team = ATTNAM_TEAM; }
-			Times = 25;
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(BATTLE_MAGE) { Team = MONSTER_TEAM; }
-			Times = 25;
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(ELDER) { Team = ATTNAM_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = darkmage(ELDER) { Team = MONSTER_TEAM; }
-			Times = 10;
-		}
-
-		Square, Random;
-		{
-			Character = eddy { Team = ATTNAM_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = eddy { Team = MONSTER_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = skunk { Team = ATTNAM_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = skunk { Team = MONSTER_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = hattifattener { Team = ATTNAM_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = hattifattener { Team = MONSTER_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = floatingeye { Team = ATTNAM_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = floatingeye { Team = MONSTER_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = kamikazedwarf { Team = ATTNAM_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Character = kamikazedwarf { Team = MONSTER_TEAM; }
-			Times = 20;
-		}
-
-		Square, Random;
-		{
-			Items == Random { Category = WAND; }
-			Times = 5000;
-		}
-
-		Square, Random;
-		{
-			Items == mine { Team = MONSTER_TEAM; IsActive = true; }
-			Times = 500;
-		}
-
-		Square, Random;
-		{
-			Items == beartrap { Team = ATTNAM_TEAM; IsActive = true; }
-			Times = 500;
-		}*/
 	}
 }
 
