@@ -9,6 +9,11 @@ is also provided AS IS and is probably completely unreadable.
 
 August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
 
+	* Some frequency and danger modifier changes
+	* Test removals
+
+August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
+
 	* UT3 is now a little easier
 	
 August 5 2003 Timo Kiviluoto <markku.kiviluoto@sono.fimnet.fi>
